[package]
name = "internal-macro"
version = "0.1.0"
authors = ["Fake Author <fakeauthor@example.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
external = { path = "../../external", features = ["macro-normal-feature"] }

[build-dependencies]
external = { path = "../../external", features = ["macro-build-feature"] }

[dev-dependencies]
external = { path = "../../external", features = ["macro-dev-feature"] }

[features]
main-build-feature = []
internal-normal-feature = []
