[package]
name = "internal"
version = "0.1.0"
authors = ["Fake Author <fakeauthor@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
external = { path = "../../external" }
internal-macro = { path = "../internal-macro", features = ["internal-normal-feature"] }

[dev-dependencies]
lazy_static = {version = "1", features = ["spin"] }
bytes = "0.5"
external = { path = "../../external", features = ["internal-dev-feature"] }

[build-dependencies]
external = { path = "../../external", features = ["internal-build-feature"] }

[target.'cfg(target_arch = "x86")'.dependencies]
x86-active = { path = "../../x86-active", optional = true }

[features]
default = []
extra = ["x86-active/extra"]
dev-feature = []
build-feature = []
