[package]
name = "main"
version = "0.1.0"
authors = ["Fake Author <fakeauthor@example.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
external = { path = "../../external" }
internal = { path = "../internal" }

[build-dependencies]
external = { path = "../../external", features = ["main-build-feature"] }
internal = { path = "../internal", features = ["build-feature"] }
internal-macro = { path = "../internal-macro", features = ["main-build-feature"] }

[dev-dependencies]
external = { path = "../../external", features = ["main-dev-feature"] }
internal = { path = "../internal", features = ["dev-feature"] }

[target.'cfg(all(unix, not(unix)))'.build-dependencies]
inactive = { path = "../../inactive" }

[features]
inactive-extra = ["inactive/extra"]
